--- a/templates/new_page.html
+++ b/templates/new_page.html
@@ -8,6 +8,6 @@
         {% csrf_token %}
         {{ form|crispy }}
         <!--Подтверждение формы-->
-        <input type="submit" value="Create" />
+        <input class="btn btn-success ml-2" type="submit" value="Create" />
     </form>
 {% endblock content %}
