--- a/templates/delete_page.html
+++ b/templates/delete_page.html
@@ -5,6 +5,6 @@
     <form action="" method="POST">
         {% csrf_token %}
         <p>Are you sure you want to delete this page></p>
-        <input type="submit" value="Confirm"/>
+        <input class="btn btn-success ml-2" type="submit" value="Confirm"/>
     </form>
 {% endblock content %}
