--- a/templates/detail_book.html
+++ b/templates/detail_book.html
@@ -5,7 +5,7 @@
     <div class="book-entry">
         <h2>{{ book.title }}</h2>
         <p>
-            <b>Автор книги:</b> {{ book.bookauthor }}<br><b>Рейтинг:</b> {{ book.bookrejtin }}
+            <b>Автор книги:</b> {{ book.bookauthor }}<br><b>Рейтинг:</b> {{ book.bookrejting }}
             <br><br>Краткое описание:<i> {{ book.body }}</i>
             
         </p>
