--- a/templates/base.html
+++ b/templates/base.html
@@ -17,18 +17,25 @@ crossorigin="anonymous">
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-  <a class="navbar-brand" href="{% url 'home' %}">Django Store App</a>  | <a class="navbar-brand" href="{% url 'books' %}">Books</a> | <a class="navbar-brand" href="{% url 'journals' %}">Journals</a> | <a class="navbar-brand" href="{% url 'list_articles' %}">Articles</a>
-    {% if user.is_authenticated %}
+  <a class="navbar-brand" href="{% url 'home' %}">Home</a>  | <a class="navbar-brand" href="{% url 'books' %}">Books</a> | <a class="navbar-brand" href="{% url 'journals' %}">Journals</a> | <a class="navbar-brand" href="{% url 'articles' %}">Articles</a>
+    
+   {% if user.is_superuser %}
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
             | <a class="navbar-brand" href="{% url 'new_page' %}"> <!--Здесь добавим ссылку на создание поста-->
             + New page
-          </a> |
-          <a class="navbar-brand" href="{% url 'new_article' %}"> <!--Здесь добавим ссылку на создание поста-->
-            + New article</a>
+          </a>
         </li>
       </ul>
     {% endif %}
+    {% if user.is_authenticated %}
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+          | <a class="navbar-brand" href="{% url 'new_article' %}"> <!--Здесь добавим ссылку на создание поста-->
+          + New article</a>
+      </li>
+    </ul>
+  {% endif %}
 <button class="navbar-toggler" type="button" data-toggle="collapse"
 data-target="#navbarCollapse" aria-controls="navbarCollapse"
 aria-expanded="false" aria-label="Toggle navigation">
