--- a/templates/detail_page.html
+++ b/templates/detail_page.html
@@ -9,6 +9,8 @@
         </p>
         <p>Автор статьи: {{ page.author }}</p>
     </div>
+    {% if user.is_superuser %}
     <a href="{% url 'update_page' page.pk %}">+ Update Page</a>
     <a href="{% url 'delete_page' page.pk %}">- Delte Page</a>
+    {% endif %}
 {% endblock content %}
