--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,11 @@ initial-scale=1, shrink-to-fit=no">
 <!-- Bootstrap CSS -->
 <link rel="stylesheet"
 href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/\
-bootstrap.min.css"
+bootstrap.min.css" type="text/css"
 integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81i\
 uXoPkFOJwJ8ERdknLPMO"
 crossorigin="anonymous">
-<title>{% block title %}Django Store App{% endblock title %}</title>
+<title>{% block title %}Django App{% endblock title %}</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
