--- a/templates/detail_journal.html
+++ b/templates/detail_journal.html
@@ -5,7 +5,7 @@
     <div class="journal-entry">
         <h2>{{ journal.title }}</h2>
         <p>
-            <b>Автор журнала:</b> {{ journal.journalauthor }}<br><b>Рейтинг:</b> {{ journal.journalspagecount }}
+            <b>Автор журнала:</b> {{ journal.journalauthor }}<br><b>Количество страниц:</b> {{ journal.journalspagecount }}
             <br><br>Краткое описание:<i> {{ journal.body }}</i>
             
         </p>
